# dbpp

./: .gitignore  CMakeLists.txt  README.md  README_zh.md
.github/workflows/: ci.yml
docs/: design_zh.md
examples/: mariadb_demo.cpp  sqlite3_demo.cpp
include/dbpp/: db.hpp  error.hpp  maria_backend.hpp  maria_db.hpp  maria_query.hpp  maria_result_set.hpp  maria_statement.hpp  sqlite3_backend.hpp  sqlite3_db.hpp  sqlite3_query.hpp  sqlite3_result_set.hpp  sqlite3_statement.hpp
tests/: test_db_template.cpp  test_error.cpp  test_mariadb_db.cpp  test_mariadb_query.cpp  test_mariadb_statement.cpp  test_sqlite3_db.cpp  test_sqlite3_query.cpp  test_sqlite3_result_set.cpp  test_sqlite3_statement.cpp
